# kubevirt

./: BUILD.bazel  WORKSPACE  go.mod
cmd/libguestfs/: BUILD.bazel
cmd/pr-helper/: BUILD.bazel
cmd/sidecars/: BUILD.bazel
cmd/sidecars/cloudinit/: BUILD.bazel
cmd/sidecars/disk-mutation/: BUILD.bazel
cmd/sidecars/network-passt-binding/: BUILD.bazel
cmd/sidecars/network-slirp-binding/: BUILD.bazel
cmd/sidecars/smbios/: BUILD.bazel
cmd/virt-api/: BUILD.bazel
cmd/virt-controller/: BUILD.bazel
cmd/virt-exportproxy/: BUILD.bazel
cmd/virt-exportserver/: BUILD.bazel
cmd/virt-handler/: BUILD.bazel
cmd/virt-launcher/: BUILD.bazel
cmd/virt-operator/: BUILD.bazel
hack/: bazel-build-images.sh  bazel-push-images.sh  bootstrap.sh  dockerized
hack/builder/: Dockerfile
rpm/: BUILD.bazel
tests/: BUILD.bazel  sysprep_test.go
tests/libkubevirt/config/: kvconfig.go
