load(
    "@rules_oci//oci:defs.bzl",
    "oci_image",
)
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "multipath",
    srcs = [":multipath.conf"],
    mode = "0600",
    package_dir = "/etc",
)

pkg_tar(
    name = "version",
    srcs = ["//:get-version"],
    mode = "0644",
    package_dir = "/",
)

oci_image(
    name = "version-container",
    base = "//:passwd-image",
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            ":multipath",
            ":version",
            "//rpm:pr-helper_aarch64",
        ],
        "//conditions:default": [
            ":multipath",
            ":version",
            "//rpm:pr-helper_x86_64",
        ],
    }),
)

oci_image(
    name = "pr-helper",
    #architecture = select({
    #    "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
    #    "//conditions:default": "amd64",
    #}),
    base = ":version-container",
    entrypoint = ["/usr/bin/qemu-pr-helper"],
)
