load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["virt-exportserver.go"],
    importpath = "kubevirt.io/kubevirt/cmd/virt-exportserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/service:go_default_library",
        "//pkg/storage/export/virt-exportserver:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
    ],
)

load("//vendor/kubevirt.io/client-go/version:def.bzl", "version_x_defs")

go_binary(
    name = "virt-exportserver",
    embed = [":go_default_library"],
    static = "on",
    visibility = ["//visibility:public"],
    x_defs = version_x_defs(),
)

load(
    "@rules_oci//oci:defs.bzl",
    "oci_image",
)
load("@rules_distroless//distroless:defs.bzl", "passwd")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@aspect_bazel_lib//lib:tar.bzl", "tar")

passwd(
    name = "passwd",
    passwds = [
        dict(
            gecos = ["nonroot-user"],
            gid = 107,
            home = "/home/nonroot-user",
            shell = "/bin/bash",
            uid = 107,
            username = "non-root-user",
        ),
    ],
)
#passwd_entry(
#    name = "nonroot-user",
#    gid = 107,
#    home = "/home/nonroot-user",
#    shell = "/bin/bash",
#    uid = 107,
#    username = "nonroot-user",
#)
#
#passwd_file(
#    name = "passwd",
#    entries = [
#        ":nonroot-user",
#    ],
#)

pkg_tar(
    name = "passwd-tar",
    srcs = [":passwd"],
    mode = "0644",
    package_dir = "etc",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "version-tar",
    srcs = ["//:get-version"],
    mode = "0644",
    package_dir = "/",
)

pkg_tar(
    name = "virt-exportserver-tar",
    srcs = [":virt-exportserver"],
    mode = "0755",
    package_dir = "/usr/bin/",
)

oci_image(
    name = "version-container",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@go_image_base_aarch64",
        "//conditions:default": "@go_image_base",
    }),
    tars = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            ":passwd-tar",
            ":version-tar",
            "//rpm:exportserverbase_aarch64",
        ],
        "//conditions:default": [
            ":passwd-tar",
            ":version-tar",
            "//rpm:exportserverbase_x86_64",
        ],
    }),
)

oci_image(
    name = "virt-exportserver-image",
    #architecture = select({
    #    "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
    #    "//conditions:default": "amd64",
    #}),
    base = ":version-container",
    entrypoint = ["/usr/bin/virt-exportserver"],
    tars = [":virt-exportserver-tar"],
    user = "1001",
)
