load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/kubevirt/cmd/sidecars/network-passt-binding",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/sidecars/network-passt-binding/server:go_default_library",
        "//pkg/hooks:go_default_library",
        "//pkg/hooks/info:go_default_library",
        "//pkg/hooks/v1alpha3:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "network-passt-binding",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "version-tar",
    srcs = ["//:get-version"],
    mode = "0644",
    package_dir = "/",
)

pkg_tar(
    name = "network-passt-binding-tar",
    srcs = [":network-passt-binding"],
    mode = "0755",
    package_dir = "/",
)

load(
    "@rules_oci//oci:defs.bzl",
    "oci_image",
)

oci_image(
    name = "version-container",
    base = "//:passwd-image",
    tars = [":version-tar"],
)

oci_image(
    name = "network-passt-binding-image",
    #architecture = select({
    #    "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
    #    "//conditions:default": "amd64",
    #}),
    base = ":version-container",
    entrypoint = ["/network-passt-binding"],
    tars = [":network-passt-binding-tar"],
)
