load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["smbios.go"],
    importpath = "kubevirt.io/kubevirt/cmd/sidecars/smbios",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
    ],
)

go_binary(
    name = "onDefineDomain",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "ondefine",
    srcs = [":onDefineDomain"],
    mode = "0775",
    package_dir = "/usr/bin/",
    visibility = ["//visibility:public"],
)

load(
    "@rules_oci//oci:defs.bzl",
    "oci_image",
)

oci_image(
    name = "example-hook-sidecar-image",
    #architecture = select({
    #    "@io_bazel_rules_go//go/platform:linux_arm64": "arm64",
    #    "//conditions:default": "amd64",
    #}),
    base = "//cmd/sidecars:sidecar-shim-image",
    entrypoint = ["/sidecar-shim"],
    tars = [":ondefine"],
)
